fixed css button sizes on mobile

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 .button, .link-button {
-    width: calc(100vw - 32px);
+    width: 100%;
     height: 3.5rem;
     background-color: #333;
     border: 1px solid #FFF;
