--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -42,7 +42,7 @@
 
 .home__list__item {
     font-size: 2rem;
-    margin: 1rem 0;
+    margin: .5rem 0;
     text-transform: uppercase;
     background-color: #333;
     border: 1px solid #FFF;
